--- a/index.css
+++ b/index.css
@@ -8,19 +8,20 @@ body {
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: stretch;
     flex-direction: column;
     
 }
 .main{
     width: 100%;
-    height: 100%;
     font-size: larger;
     display: flex;
-    align-items: stretch;
     justify-content: flex-start;
     background-image: url('main_kopce.png');
-    background-repeat: no-repeat
+    background-repeat: no-repeat;
+    /* background-size: 100%; */
+    background-size: cover;
+    background-position: center;
 }
 header, footer {
     width:100%;
@@ -39,8 +40,8 @@ header{
 }
 footer{
     border-style:solid hidden hidden hidden;
-    padding: 1%
 }
+
 nav a{
     background-color: #B9A394;
     width: 15%;
@@ -68,21 +69,55 @@ aside{
     width: 100%;
     height: auto;
 }
-.image{
-    height: auto;
-}
-img{
-    width:100%;
-    height: 100%;
-    object-fit: contain;
-}
+
 .text{
     height: 100%;
-    width: 50%;
+    width: 25%;
     padding: 1%;
-    flex-shrink: 2;
-    background-image: linear-gradient(to left, rgba(255,0,0,0), #F9A03F);
+    background-image: linear-gradient(to left, rgba(255,0,0,0), #F9A03F,#F9A03F,#F9A03F,#F9A03F,#F9A03F,#F9A03F,#F9A03F,#F9A03F);
+    color: black;
+    
+}
+
+@media screen and (max-width: 700px) {
+    .text {
+        width: 50%
+    }
 }
 
 
-  
+.contacts{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #F9A03F;
+}
+
+form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+#message{
+    height: 15vh;
+}
+
+.gallery{
+    background-color: #F9A03F;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap; 
+}
+
+.zdj{
+    height:300px;
+    margin: 10px;
+}
+
+#clock{
+    font-size: 50px;
+}
